Dummy_Package_for_scratch_org/main/default/objects/Scratch_Org_Project_Template__c/Scratch_Org_Project_Template__c.object-meta.xml
<CustomObject>
    <label>Scratch Org Project Template</label>
    <nameField>
        <label>Scratch Org Artifacts Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scratch Org Project Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>