Dummy_Package_for_scratch_org/main/default/objects/Scratch_Org_Project_Template__c/fields/Api_Version__c.field-meta.xml
<CustomField>
    <fullName>Api_Version__c</fullName>
    <label>Api Version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>44.0</fullName>
            </value>
            <value>
                <fullName>43.0</fullName>
            </value>
            <value>
                <fullName>42.0</fullName>
            </value>
            <value>
                <fullName>41.0</fullName>
            </value>
            <value>
                <fullName>40.0</fullName>
            </value>
            <value>
                <fullName>39.0</fullName>
            </value>
            <value>
                <fullName>38.0</fullName>
            </value>
            <value>
                <fullName>37.0</fullName>
            </value>
            <value>
                <fullName>36.0</fullName>
            </value>
            <value>
                <fullName>35.0</fullName>
            </value>
            <value>
                <fullName>34.0</fullName>
            </value>
            <value>
                <fullName>33.0</fullName>
            </value>
            <value>
                <fullName>32.0</fullName>
            </value>
            <value>
                <fullName>31.0</fullName>
            </value>
            <value>
                <fullName>30.0</fullName>
            </value>
            <value>
                <fullName>29.0</fullName>
            </value>
            <value>
                <fullName>28.0</fullName>
            </value>
            <value>
                <fullName>27.0</fullName>
            </value>
            <value>
                <fullName>26.0</fullName>
            </value>
            <value>
                <fullName>25.0</fullName>
            </value>
            <value>
                <fullName>24.0</fullName>
            </value>
            <value>
                <fullName>23.0</fullName>
            </value>
            <value>
                <fullName>22.0</fullName>
            </value>
            <value>
                <fullName>21.0</fullName>
            </value>
            <value>
                <fullName>20.0</fullName>
            </value>
            <value>
                <fullName>45.0</fullName>
                <default>true</default>
                <label>45.0</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>