Dummy_Package_for_scratch_org/main/default/objects/Scratch_Org_Project_Template__c/fields/Namespace__c.field-meta.xml
<CustomField>
    <fullName>Namespace__c</fullName>
    <label>Namespace</label>
    <length>100</length>
    <type>Text</type>
</CustomField>