Dummy_Package_for_scratch_org/main/default/objects/Scratch_Org_Project_Template__c/fields/Project_JSON__c.field-meta.xml
<CustomField>
    <fullName>Project_JSON__c</fullName>
    <label>Project JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>