Dummy_Package_for_scratch_org/main/default/objects/Scratch_Org_Project_Template__c/fields/SFDC_Login_Url__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Login_Url__c</fullName>
    <defaultValue>&apos;https://login.salesforce.com&apos;</defaultValue>
    <label>SFDC Login Url</label>
    <type>Url</type>
</CustomField>