Dummy_Package_for_scratch_org/main/default/objects/Scratch_Org_Project_Template__c/fields/Source_Org_Credential__c.field-meta.xml
<CustomField>
    <fullName>Source_Org_Credential__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Credential</label>
    <referenceTo>Org__c</referenceTo>
    <relationshipLabel>Scratch Org Project Templates (Source Credential)</relationshipLabel>
    <relationshipName>Scratch_Org_Project_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>