Dummy_Package_for_scratch_org/main/default/objects/Scratch_Org_Project_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Developer_Hub_Org__c</columns>
    <columns>Source_Org_Credential__c</columns>
    <columns>Api_Version__c</columns>
    <columns>SFDC_Login_Url__c</columns>
    <columns>Namespace__c</columns>
    <columns>Project_JSON__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>